# uart-to-gamepad

./: Cargo.toml  LICENSE  README.md  build.sh  justfile  rust-toolchain.toml
crsf-proto/: Cargo.toml  README.md
crsf-proto/src/: lib.rs  mapping.rs  telemetry.rs
firmware/: Cargo.toml
firmware-rp2040/: Cargo.toml  README.md
firmware-rp2040/src/: lib.rs  usb_output.rs
firmware-rp2040/src/input/: crsf.rs  gamepad.rs  mavlink.rs  mod.rs
firmware/src/: lib.rs  uart_input.rs  usb_output.rs
gamepad-core/: Cargo.toml  README.md
gamepad-core/src/: bridge.rs  input.rs  lib.rs  output.rs  parser.rs  telemetry.rs  types.rs
gamepad-proto/: Cargo.toml  README.md
gamepad-proto/src/: builder.rs  crc.rs  fmt.rs  format.rs  lib.rs  parser.rs  serialize.rs  types.rs
mavlink-proto/: Cargo.toml  README.md
mavlink-proto/src/: lib.rs  mapping.rs  parser.rs
src/: bridge.rs  gamepad.rs  lib.rs
src/input/: mod.rs  parser.rs  traits.rs  uart.rs
src/output/: mod.rs  traits.rs  usb_hid.rs
