[workspace]
resolver = "2"
members = [
    "gamepad-proto",
    "gamepad-core",
    "crsf-proto",
    "mavlink-proto",
    "firmware-rp2040",
]

# Shared patch configuration for embassy git dependencies
[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", branch = "main" }

# Workspace-wide profile settings
[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

# Production profile - optimized for size and without debug info
[profile.production]
inherits = "release"
opt-level = "z"
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
