[package]
name = "uart-to-gamepad"
version = "0.1.0"
edition = "2021"
description = "UART to USB Gamepad bridge for RP2040"

[[bin]]
name = "uart-to-gamepad"
path = "src/bin/main.rs"

[lib]
name = "uart_to_gamepad"
path = "src/lib.rs"

[features]
default = ["dev-panic", "standard-hid"]
dev-panic = []          # Use panic-probe for development
prod-panic = []         # Use panic-reset for production
standard-hid = []       # Standard HID gamepad (cross-platform)
xinput-compat = []      # Xbox-style controller (better Windows game support)
uart-flow-control = []  # Enable CTS/RTS on GPIO 10/11

# Default target for IDEs
[package.metadata]
default-target = "thumbv6m-none-eabi"

[dependencies]
# Platform-agnostic core (from workspace)
gamepad-core = { path = "../gamepad-core", features = ["defmt"] }

# Embassy async runtime
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.9.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }
static_cell = "2.1"
portable-atomic = { version = "1.13", features = ["critical-section"] }

defmt = "1"
defmt-rtt = "1"

cortex-m = { version = "0.7.7", features = [
    "inline-asm",
] }
cortex-m-rt = "0.7"
panic-probe = { version = "1", features = ["print-defmt"] }
panic-reset = "0.1.1"

heapless = "0.9"
usbd-hid = "0.9"

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
log = "0.4.29"

fixed = "1.29"
fixed-macro = "1.2"
