[package]
name = "gamepad-proto"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "UART protocol types, parsing, and serialization for gamepad bridge"

[lib]
name = "gamepad_proto"
path = "src/lib.rs"

[features]
default = []
std = []
defmt = ["dep:defmt"]
heapless = ["dep:heapless"]
embedded-io = ["dep:embedded-io"]

[dependencies]
crc = { version = "3.4", default-features = false }
defmt = { version = "1", optional = true }
heapless = { version = "0.8", optional = true }
embedded-io = { version = "0.6", optional = true }
