[package]
name = "mavlink-proto"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "MAVLink protocol parsing and gamepad mapping (chip-agnostic)"

[lib]
name = "mavlink_proto"
path = "src/lib.rs"

[features]
default = []
std = []  # Enable std for testing
defmt = ["dep:defmt"]

[dependencies]
# Core gamepad types
gamepad-core = { path = "../gamepad-core" }

# Logging (optional)
defmt = { version = "1", optional = true }

# No-std collections
heapless = "0.8"
